<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonPickVibroBasic_Control_v_1_x_x" Id="{bf9e881a-eb59-07c2-0fd4-331dba64a02b}">
    <Declaration><![CDATA[TYPE TcoTixonPickVibroBasic_Control_v_1_x_x EXTENDS TcoTixonGenericControl :
STRUCT
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>